<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_product_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/product_name" />

                <EditText
                    android:id="@+id/name"
                    style="@style/EditorFieldStyle"
                    android:layout_width="140dp"
                    android:layout_height="43dp"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    tools:text="Product Name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_product_price" />

                <EditText
                    android:id="@+id/price"
                    style="@style/EditorFieldStyle"
                    android:layout_width="140dp"
                    android:layout_height="43dp"
                    android:inputType="numberDecimal"
                    tools:text="$" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_quantity" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dec"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="-" />

                    <EditText
                        android:id="@+id/quantity"
                        style="@style/EditorFieldStyle"
                        android:layout_width="40dp"
                        android:layout_height="43dp"
                        android:hint="0"
                        android:inputType="number"
                        android:maxLines="1"
                        tools:text="3" />

                    <Button
                        android:id="@+id/inc"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="+" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_supplier" />

                <EditText
                    android:id="@+id/supplier"
                    android:layout_width="196dp"
                    android:layout_height="43dp"
                    android:contentDescription="@string/set_supplier"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/order_supplier_button"
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:text="@string/order_more"
                android:textAlignment="center" />

            <Button
                android:id="@+id/save_product_button"
                android:layout_width="80dp"
                android:layout_height="36dp"
                android:text="@string/update" />

            <Button
                android:id="@+id/change_photo_button"
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:text="@string/update_photo" />

            <Button
                android:id="@+id/delete_product_button"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:text="Delete Product"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>